--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 /*コピー用*/
 /*headerの設定*/
 .header {
-  position: relative;
+  /*  position: relative;*/
 }
 
 /*navの設定*/
@@ -73,14 +73,14 @@ header li a:hover {
   font-size: 20px;
 }
 
-.info-1{
+.info-1 {
   text-align: center;
 }
 
 h3 {
   text-align: center;
   font-size: 50px;
-   margin: 30px 0px 25px 0px;
+  margin: 30px 0px 25px 0px;
 }
 
 h4 {
@@ -95,8 +95,8 @@ h4 {
   font-size: 25px;
 }
 
-.info-2{
- margin: 70px 0px 5px 0px;
+.info-2 {
+  margin: 70px 0px 5px 0px;
   text-align: center;
   font-size: 15px;
 }
@@ -104,8 +104,8 @@ h4 {
 /*portfolio*/
 
 .pt {
-    width: 100%;
-  height: 900px;
+  width: 100%;
+  margin-bottom: 0px;
   position: relative;
   background: #f9f8f7;
 }
@@ -116,13 +116,16 @@ h4 {
   font-size: 60px;
 }
 
-video {
-
+.video {
+  text-align: center;
+  padding: 70px;
+  box-shadow: 20px 15px 4px #eb496d;
 }
+
 /*Member*/
 .member-1 {
   width: 100%;
-  height: 900px;
+  height: 700px;
   position: relative;
   background: #1e1d1d;
 }
@@ -142,19 +145,33 @@ video {
 
 
 .m-img img {
-  width: 29%;
-  margin: 0 auto;
+  width: 25%;
+  padding: 30p;
+  box-shadow: 30px 20px 20px #eb496d;
 }
+
+
+.member-img {
+  display: inline-block;
+  margin: 0px 40px 0px 40px;
+/*  インライン要素調べる
+  インライン横に並べる　margin ×
+  ブロック　幅高さを指定できる　縦並びに
+  インラインブロック両方
+  */
+}
+
 
 /*contect*/
 
 .contect-1 {
   width: 100%;
-  height: 500px;
+  height: 400px;
   position: relative;
   background: #1e1d1d;
   display: block;
 }
+
 .title-4 {
   text-align: center;
   padding: 0px 60px 20px;
@@ -162,26 +179,32 @@ video {
   color: aliceblue;
 }
 
+.contect-1 {
+  text-align: center;
+}
+
+
 .contect-1 p {
   color: aliceblue;
   text-align: center;
-  padding: 70px;
+  padding: 40px 0px 40px;
   font-family: SawarabiMincho;
 }
 
 
 .conect-bo {
   display: inline-block;
-  position: absolute;
+  /*  position: absolute;*/
   color: #000;
   text-decoration: none;
-  clear: both;
+  /*  clear: both;*/
   margin: 0 auto;
   padding: 10px 15px;
   font-weight: 700;
   font-size: 20px;
   background-color: #fff;
   text-align: center;
+  box-shadow: 20px 15px 12px #eb496d;
 }
 
 
