--- a/style.css
+++ b/style.css
@@ -42,15 +42,25 @@ header li a:hover {
 
 
 /*背景（header)*/
-.bg-img img {
-  width: 100vw;
-  height: 100vh;
-  /*   background-position: center center;*/
-  /*  background-size: cover;*/
+.image-slider{
+  width: 100px;
+  height: 100px;
+}
+
+
+.image-slider img {
+  width: 50vw;
+  height: 50vh;
+   background-position: center center;
+  background-size: cover;
 }
 
 .bg-img {
-  background: #f5f5f5;
+  background: url("img/3.png");
+  background-position: center;
+  -webkit-background-size: cover;
+  background-size: ;
+  height: 100vh;
 }
 
 /*Aboutの規定*/
@@ -62,9 +72,22 @@ header li a:hover {
 }
 
 .info img {
-  
+
   width: 60%;
 }
+
+
+.bg-slider {
+	width: 100vw;
+	height: 100vh;
+	background-position:center center;
+	background-size: cover;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+
 
 .box {
   position: absolute;
@@ -85,7 +108,7 @@ header li a:hover {
 }
 
 .info-1 {
-/*  text-align: center;*/
+  /*  text-align: center;*/
 }
 
 h3 {
@@ -155,7 +178,7 @@ h4 {
 }
 
 .m-img {
-  padding: 100px 0px 0px 0px;
+  padding: 0px 100px 0px;
   text-align: center;
 }
 
@@ -163,10 +186,15 @@ h4 {
 
 .m-img img {
   width: 25%;
-  padding: 30p;
-  box-shadow: 30px 20px 20px #eb496d;
+  transition: transform 0.5s, box-shadow 0.5s;
 }
 
+.m-img img:hover {
+
+  transform: scale(1.2);
+
+  box-shadow: 30px 20px 20px #eb496d;
+}
 
 .member-img {
   display: inline-block;
@@ -222,10 +250,10 @@ h4 {
   font-size: 20px;
   background-color: #fff;
   text-align: center;
-/*  box-shadow: 20px 15px 12px #eb496d;*/
+  /*  box-shadow: 20px 15px 12px #eb496d;*/
 }
 
- .conect-bo{
+.conect-bo {
   display: block;
   width: 220px;
   padding: 20px 0;
@@ -233,13 +261,11 @@ h4 {
   background-repeat: no-repeat;
   background-position: 100% 0;
   background-size: 200% auto;
-  background-image: linear-gradient(
-    to right,
-    #FFCCFF 0%,
-    #eb496d 50%,
-    #fff 50%,
-    #fff 100%
-  );
+  background-image: linear-gradient(to right,
+      #FFCCFF 0%,
+      #eb496d 50%,
+      #fff 50%,
+      #fff 100%);
   box-shadow: 0 3px 10px rgb(0 0 0 / 16%);
   transition: background-position ease 0.4s;
   text-align: center;
@@ -253,9 +279,26 @@ h4 {
   background-position: 0 0;
 }
 
+.sns {
+  display: flex;
+  width: 80%;
+  justify-content: flex-end;
+}
 
+.link {
+  display: block;
+}
 
+.sns img:hover {
 
+  transform: scale(1.8);
+
+  box-shadow: 10px  #eb496d;
+}
+
+.sns img {
+  transition: transform 0.5s, box-shadow 0.5s;
+}
 
 /*
 .conect-bo:hover {
@@ -272,6 +315,3 @@ h4 {
   color: #eb496d;
 }
 */
-
-
-
