--- a/style.css
+++ b/style.css
@@ -75,14 +75,25 @@ header li a:hover {
 
   width: 60%;
 }
+.bg-slider {
+    width: 100vh;
+    height: 70vh;
+    background-position: center center;
+    background-size: cover;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 1;
+}
 
-
+/*
 .bg-slider img {
   width: 50vw;
   height: 50vh;
   background-position: center center;
   background-size: cover;
 }
+*/
 
 
 
@@ -304,6 +315,16 @@ video {
   transition: transform 0.5s, box-shadow 0.5s;
 }
 
+
+footer {
+  width: 100%;
+  height: 30px;
+  overflow: hidden;
+  text-align: center;
+  font-family: futura;
+  color: #fff;
+  background: #1e1d1d;
+}
 /*
 .conect-bo:hover {
   color:aquamarine;
@@ -350,7 +371,7 @@ video {
   }
 
   video {
-    width: 90%;
+    width: 94%;
   }
 
   .video {
@@ -448,7 +469,7 @@ video {
 
 .contect-1 {
   width: 100%;
-  height: 700px;
+  height: 350px;
   position: unset;
   background: #1e1d1d;
   display: block;
@@ -529,6 +550,15 @@ video {
   width: 100%;
   justify-content: center;
 }
-  
+.bg-slider {
+    width: 46vh;
+    height: 30vh;
+    background-position: center center;
+    background-size: cover;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 1;
+}  
   
 }
