--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@ header li a:hover {
   width: 100%;
   height: 900px;
   position: relative;
-  background: #f5f5f5;
+  background: #dcdcdc;
 }
 
 .info img {
@@ -153,7 +153,7 @@ h4 {
   width: 100%;
   margin-bottom: 0px;
   position: relative;
-  background: #f5f5f5;
+  background: #dcdcdc;
 }
 
 .title-2 {
@@ -296,7 +296,7 @@ video {
 
 .sns {
   display: flex;
-  width: 80%;
+  width: 100%;
   justify-content: flex-end;
 }
 
@@ -350,7 +350,7 @@ footer {
     background-position: center;
     -webkit-background-size: cover;
     background-size: ;
-    height: 100vh;
+    height: 120vh;
     width: 100vw;
   }
 
@@ -551,8 +551,8 @@ footer {
   justify-content: center;
 }
 .bg-slider {
-    width: 46vh;
-    height: 30vh;
+    width: 100%;
+    height: 40vh;
     background-position: center center;
     background-size: cover;
     display: flex;
